fix(ui): validation message styling on small messages

--- a/src/blocks/popup/__error/popup__error.css
+++ b/src/blocks/popup/__error/popup__error.css
@@ -1,3 +1,4 @@
 .popup__error {
-
+	display: inline-block;
+	min-height: 2lh;
 }
